# edgerun

./: .actrc  .dockerignore  .gitignore  AGENTS.md  CNAME  Cargo.toml  Documents_edgerun  Future-ideas.md  Future-ideas.mdx  LICENSE  LICENSING.md  LICENSING.mdx  Makefile  NOTICE  Phase-2-whitepaper.md  README.md  TRADEMARKS.md  TRADEMARK_NOTICE.mdx  Whitepaper-phase-2.mdx  Whitepaper.md  Whitepaper.mdx  compose.yaml  docker-compose.node-manager.yml  docker-compose.services.yml  docker-compose.yml  edgerun  edgerun.toml.example  package.json  relay.txt  wrangler-os.jsonc  wrangler.jsonc
crates/edgerun-bootloader-efi/: Cargo.toml
crates/edgerun-bootloader-efi/src/: efi_main.rs
crates/edgerun-cli/: Cargo.toml
crates/edgerun-cli/src/: integration_helpers.rs  main.rs  process_helpers.rs
crates/edgerun-cli/src/commands/: ci.rs  event_bus.rs  execution.rs  integration.rs  mcp.rs  mod.rs  observer.rs  program.rs  runtime_ops.rs  storage.rs  tailscale.rs  tasks.rs  timeline.rs
crates/edgerun-cli/tests/: cli_real_paths.rs
crates/edgerun-containerd-shim/: Cargo.toml
crates/edgerun-containerd-shim/src/: containerd_main.rs  lib.rs  main.rs  task_api.rs  task_service.rs  ttrpc_task.rs
crates/edgerun-device-cap-host/: Cargo.toml  build.rs
crates/edgerun-device-cap-host/src/: benchmark.rs  lib.rs  proto.rs
crates/edgerun-discovery/: Cargo.toml
crates/edgerun-discovery/src/: lib.rs
crates/edgerun-event-bus/: Cargo.toml  build.rs
crates/edgerun-event-bus/src/: edge_internal.rs  lib.rs
crates/edgerun-hwvault-primitives/: Cargo.toml  README.md
crates/edgerun-hwvault-primitives/src/: audit.rs  hardware.rs  lib.rs  session.rs
crates/edgerun-node-manager/: Cargo.toml
crates/edgerun-node-manager/src/: main.rs
crates/edgerun-node-manager/src/local_bridge/: cloudflare.rs  cloudflare_handlers.rs  docker_handlers.rs  docker_local.rs  mod.rs  (+2 more)
crates/edgerun-observability/: Cargo.toml
crates/edgerun-observability/src/: lib.rs
crates/edgerun-p2p/: Cargo.toml
crates/edgerun-p2p/src/: lib.rs
crates/edgerun-rbi-gateway/: Cargo.toml
crates/edgerun-rbi-gateway/src/: main.rs
crates/edgerun-routing/: Cargo.toml
crates/edgerun-routing/src/: lib.rs
crates/edgerun-runtime/: ABI_COMPATIBILITY_POLICY.md  Cargo.toml  EXTERNAL_SECURITY_REVIEW.md  PRODUCTION_READINESS.md  REPLAY_ARTIFACT_CONTRACT.md  SECURITY_FINDINGS.json  SECURITY_REVIEW.md
crates/edgerun-runtime-web/: Cargo.toml  README.md  README.mdx
crates/edgerun-runtime-web/src/: lib.rs
crates/edgerun-runtime/fuzz/: Cargo.toml  README.md
crates/edgerun-runtime/src/: bundle.rs  gha_runner.rs  lib.rs  main.rs  validate.rs
crates/edgerun-scheduler/: Cargo.toml  LICENSE
crates/edgerun-scheduler/src/: main.rs  workflow_domain.rs
crates/edgerun-snapshotter/: Cargo.toml
crates/edgerun-snapshotter/src/: lib.rs  main.rs
crates/edgerun-storage/: CONTRIBUTING.md  Cargo.toml  LICENSE  PRODUCTION_PLAN.md  README.md  README.mdx  ROADMAP.md  build.rs
crates/edgerun-storage/.cargo/: config.toml
crates/edgerun-storage/benches/: README.md  event_serialize.rs
crates/edgerun-storage/docs/: ARCHITECTURE.md  CRATE_PUBLISHING.md  DEVELOPER_CLI.md  OPERATIONS.md  REPO_STRUCTURE.md  operator-guide.md
crates/edgerun-storage/src/: arena.rs  async_segment_writer.rs  block.rs  context_engine.rs  crash_test.rs  crdt.rs  docker_logger.rs  durability.rs  encryption.rs  event.rs  event_bus.rs  index.rs  io_reactor.rs  key_management.rs  lib.rs  lsm_index.rs  manifest.rs  materialized_state.rs  optimized_writer.rs  os.rs  replication.rs  seal_policy.rs  segment.rs  sharding.rs  timeline.rs  virtual_fs.rs
crates/edgerun-storage/tests/: replicated_quorum_integration.rs
crates/edgerun-storage/tools/: async_writer_benchmark.rs  benchmark_10gb.rs  benchmark_1gb_comprehensive.rs  build_docker_log_driver_plugin.sh  context_bundle_dump.rs  context_ingest_ra_proto.rs  crash_campaign.rs  devctl.sh  docker_log_driver.rs  docker_log_ingest.rs  docker_log_ingest_benchmark.rs  durability_benchmarks.rs  encrypted_append_demo.rs  encryption_overhead_benchmark.rs  io_uring_benchmark.rs  lsm_comparison.rs  mixed_rw_compaction_benchmark.rs  mixed_rw_tuning_sweep.sh  msi_benchmark.rs  optimization_benchmark.rs  optimized_writer_benchmark.rs  perf_gate.sh  proposal_batch_gatekeeper.rs  proposal_gatekeeper.rs  replication_group_commit_benchmark.rs  simulate_10_agents.rs  stress_test_10gb.rs  vfs_operator.rs
crates/edgerun-term-core/: Cargo.toml
crates/edgerun-term-core/examples/: metrics.rs
crates/edgerun-term-core/src/: app_render.rs  blit.wgsl  debug.rs  glyph.wgsl  gpu.rs  input.rs  lib.rs  logging.rs  rect.wgsl  render.rs  suggest.rs  tab.rs  terminal.rs  test_support.rs
crates/edgerun-term-core/tests/: smoke.rs
crates/edgerun-term-native/: Cargo.toml  build.rs
crates/edgerun-term-native/benches/: render_cpu.rs
crates/edgerun-term-native/src/: app_render.rs  clipboard.rs  input.rs  input_loop.rs  linking.rs  logging.rs  main.rs  platform.rs  render.rs  state.rs  suggest.rs  tab.rs
crates/edgerun-term-native/tests/: smoke.rs
crates/edgerun-term-server/: Cargo.toml
crates/edgerun-term-server/benches/: mux_protocol.rs  mux_smoke.rs
crates/edgerun-term-server/src/: main.rs
crates/edgerun-term-ui/: Cargo.toml
crates/edgerun-term-ui/src/: app_render.rs  debug.rs  input.rs  lib.rs  overlay.rs  suggest.rs
crates/edgerun-term-web/: Cargo.toml
crates/edgerun-term-web/src/: lib.rs
crates/edgerun-terminal/ui/: Cargo.toml
crates/edgerun-transport-quic/: Cargo.toml
crates/edgerun-transport-quic/src/: lib.rs
crates/edgerun-transport-ws/: Cargo.toml
crates/edgerun-transport-ws/src/: lib.rs
crates/edgerun-tunnel-relay/: Cargo.toml
crates/edgerun-tunnel-relay/src/: main.rs
crates/edgerun-worker/: Cargo.toml
crates/edgerun-worker/src/: executor_registry.rs  main.rs
edgerun-apps/solana-vanity-address-generator/: Cargo.toml
edgerun-apps/solana-vanity-address-generator/edgerun-vanity-client/: Cargo.toml  README.mdx
edgerun-apps/solana-vanity-address-generator/edgerun-vanity-payload/: Cargo.toml  README.mdx
(+2650 files in other folders)
