[workspace]
members = [
  "crates/edgerun-types",
  "crates/edgerun-crypto",
  "crates/edgerun-runtime",
  "crates/edgerun-worker",
  "crates/edgerun-scheduler",
  "crates/edgerun-storage",
]
exclude = ["program/programs/edgerun_program"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wasmparser = "0.239"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
bincode = "1.3"
solana-client = "2.3"
solana-sdk = "2.3"
solana-system-interface = "1.0"
wasmi = "2.0.0-beta.1"
wat = "1"
