[workspace]
members = [
  "crates/edgerun-observability",
  "crates/edgerun-cli",
  "crates/edgerun-types",
  "crates/edgerun-control-signing",
  "crates/edgerun-p2p",
  "crates/edgerun-crypto",
  "crates/edgerun-runtime",
  "crates/edgerun-runtime-web",
  "crates/edgerun-worker",
  "crates/edgerun-scheduler",
  "crates/edgerun-storage",
  "crates/edgerun-term-core",
  "crates/edgerun-term-ui",
  "crates/edgerun-term-native",
  "crates/edgerun-term-web",
  "crates/edgerun-term-server",
  "crates/edgerun-node-manager",
  "crates/edgerun-runtime-proto",
  "crates/edgerun-containerd-shim",
  "crates/edgerun-snapshotter",
  "crates/edgerun-hwvault-primitives",
]
exclude = ["program/programs/edgerun_program"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "time", "process"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tower-http = "0.6"
wasmparser = "0.239"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
bincode = "1.3"
wasmi = "2.0.0-beta.1"
wat = "1"
