[workspace]
members = [
  "crates/edgerun-observability",
  "crates/edgerun-types",
  "crates/edgerun-transport-core",
  "crates/edgerun-crypto",
  "crates/edgerun-runtime",
  "crates/edgerun-runtime-web",
  "crates/edgerun-worker",
  "crates/edgerun-scheduler",
  "crates/edgerun-storage",
  "crates/edgerun-event-bus",
  "crates/edgerun-event-bus-wasm",
  "crates/edgerun-terminal/core",
  "crates/edgerun-terminal/ui",
  "crates/edgerun-terminal/web",
  "crates/edgerun-terminal/server",
  "crates/edgerun-node-manager",
  "crates/edgerun-runtime-proto",
  "crates/edgerun-containerd-shim",
  "crates/edgerun-hwvault-primitives",
  "crates/edgerun-boot-policy",
  "crates/edgerun-bootloader-efi",
  "crates/edgerun-device-cap-core",
  "crates/edgerun-device-cap-host",
  "crates/edgerun-p2p",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
blake3 = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "time", "process"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tower-http = "0.6"
wasmparser = "0.239"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
bincode = "1.3"
wasmi = "2.0.0-beta.1"
wat = "1"

[profile.dev-release]
inherits = "release"
lto = "off"
codegen-units = 16
debug = 0
strip = "none"
incremental = true
