# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-cli"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[[bin]]
name = "edgerun"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tower-http = { workspace = true, features = ["cors"] }
