# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-cli"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[[bin]]
name = "edgerun"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
blake3.workspace = true
clap.workspace = true
reqwest.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde.workspace = true
bincode.workspace = true
tokio.workspace = true
json = "0.12"
futures-util = "0.3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
toml = "0.8"
tower-http = { workspace = true, features = ["cors"] }
edgerun-storage = { path = "../edgerun-storage" }
edgerun-types = { path = "../edgerun-types" }
