# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-containerd-shim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
async-trait = "0.1"
prost = "0.14"
oci-spec = "0.7.1"
containerd-shim-protos = { version = "0.10", features = ["async"] }
containerd-shim = { version = "0.10", features = ["async"] }
edgerun-runtime-proto = { path = "../edgerun-runtime-proto" }
edgerun-storage = { path = "../edgerun-storage" }

[lib]
name = "edgerun_containerd_shim"
path = "src/lib.rs"

[[bin]]
name = "containerd-shim-edgerun-v1"
path = "src/main.rs"

[[bin]]
name = "containerd-shim-edgerun-v2"
path = "src/containerd_main.rs"
