# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
edgerun-transport-core = { path = "../edgerun-transport-core" }
serde.workspace = true
serde_json.workspace = true
futures-util = "0.3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2.5"

[dev-dependencies]
tokio.workspace = true
