# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
edgerun-p2p = { path = "../edgerun-p2p" }
edgerun-transport-core = { path = "../edgerun-transport-core" }

[dev-dependencies]
tokio.workspace = true
