[package]
name = "edgerun-hwvault-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"
thiserror.workspace = true
