# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-node-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
sonic-rs.workspace = true
reqwest.workspace = true
tokio.workspace = true
libc = "0.2"
edgerun-hwvault-primitives = { path = "../edgerun-hwvault-primitives" }
