# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-node-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures-util = "0.3"
serde.workspace = true
sonic-rs.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync"] }
libc = "0.2"
prost = "0.13"
edgerun-hwvault-primitives = { path = "../edgerun-hwvault-primitives" }
edgerun-runtime-proto = { path = "../edgerun-runtime-proto" }
edgerun-storage = { path = "../edgerun-storage" }
