# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
edgerun-storage = { path = "../edgerun-storage" }
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
