# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
hex.workspace = true
sha2 = "0.10"
libp2p = { version = "0.55", features = ["tcp", "tokio", "noise", "yamux", "ping", "identify", "gossipsub", "macros"] }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
