[package]
name = "edgerun-rbi-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
sonic-rs.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
