# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-routing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
bytes = "1"
edgerun-transport-core = { path = "../edgerun-transport-core" }
tokio = { workspace = true, features = ["sync"] }
