[package]
name = "edgerun-runtime"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
ciborium.workspace = true
clap.workspace = true
hex.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmparser.workspace = true
wasmi.workspace = true
thiserror.workspace = true
wat.workspace = true
edgerun-crypto = { path = "../../crates/edgerun-crypto" }
edgerun-types = { path = "../../crates/edgerun-types" }
