# SPDX-License-Identifier: LicenseRef-Edgerun-Proprietary
[package]
name = "edgerun-scheduler"
version.workspace = true
edition.workspace = true
license = "LicenseRef-Edgerun-Proprietary"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
ed25519-dalek.workspace = true
edgerun-crypto = { path = "../../crates/edgerun-crypto" }
edgerun-types = { path = "../../crates/edgerun-types" }
edgerun-hwvault-primitives = { path = "../../crates/edgerun-hwvault-primitives" }
fs2 = "0.4"

[dev-dependencies]
hmac = "0.12"
sha2 = "0.10"
