# SPDX-License-Identifier: LicenseRef-Edgerun-Proprietary
[package]
name = "edgerun-scheduler"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
bincode.workspace = true
solana-sdk = "2.3"
ed25519-dalek.workspace = true
edgerun-crypto = { path = "../../crates/edgerun-crypto" }
edgerun-observability = { path = "../../crates/edgerun-observability" }
edgerun-storage = { path = "../../crates/edgerun-storage" }
edgerun-types = { path = "../../crates/edgerun-types" }
edgerun-control-signing = { path = "../../crates/edgerun-control-signing" }
edgerun-p2p = { path = "../../crates/edgerun-p2p" }
edgerun-hwvault-primitives = { path = "../../crates/edgerun-hwvault-primitives" }
fs2 = "0.4"
prost = "0.14"
