# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-snapshotter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
prost = "0.13"
edgerun-runtime-proto = { path = "../edgerun-runtime-proto" }
edgerun-storage = { path = "../edgerun-storage" }

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "edgerun_snapshotter"
path = "src/lib.rs"

[[bin]]
name = "edgerun-snapshotterd"
path = "src/main.rs"
