# SPDX-License-Identifier: GPL-2.0-only
[package]
name = "edgerun-storage"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
description = "High-performance storage engine with io_uring I/O, durability tiers, and replication primitives"
readme = "README.mdx"
keywords = ["storage", "io-uring", "durability", "lsm", "replication"]
categories = ["database-implementations", "filesystem", "asynchronous"]
exclude = ["/target", "/.github", "/tmp", "*.log"]

[dependencies]
blake3.workspace = true
hex.workspace = true
prost = "0.13"
edgerun-crypto = { path = "../edgerun-crypto" }
serde.workspace = true
serde_json = "1"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror.workspace = true
rand = "0.8"
crc32fast = "1.4"
num_cpus = "1.16"
io-uring = "0.7"
libc = "0.2"
crossbeam-channel = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[build-dependencies]
prost-build = "0.13"

[features]
default = []
encryption = []
long-tests = []

[lib]
name = "edgerun_storage"
path = "src/lib.rs"

[[bench]]
name = "event_serialize"
harness = false

[[bin]]
name = "benchmark_10gb"
path = "tools/benchmark_10gb.rs"
bench = false

[[bin]]
name = "benchmark_1gb_comprehensive"
path = "tools/benchmark_1gb_comprehensive.rs"
bench = false

[[bin]]
name = "stress_test_10gb"
path = "tools/stress_test_10gb.rs"
bench = false

[[bin]]
name = "durability_benchmarks"
path = "tools/durability_benchmarks.rs"
bench = false

[[bin]]
name = "lsm_comparison"
path = "tools/lsm_comparison.rs"
bench = false

[[bin]]
name = "msi_benchmark"
path = "tools/msi_benchmark.rs"
bench = false

[[bin]]
name = "io_uring_benchmark"
path = "tools/io_uring_benchmark.rs"
bench = false

[[bin]]
name = "optimization_benchmark"
path = "tools/optimization_benchmark.rs"
bench = false

[[bin]]
name = "optimized_writer_benchmark"
path = "tools/optimized_writer_benchmark.rs"
bench = false

[[bin]]
name = "async_writer_benchmark"
path = "tools/async_writer_benchmark.rs"
bench = false

[[bin]]
name = "mixed_rw_compaction_benchmark"
path = "tools/mixed_rw_compaction_benchmark.rs"
bench = false

[[bin]]
name = "crash_campaign"
path = "tools/crash_campaign.rs"
bench = false

[[bin]]
name = "replication_group_commit_benchmark"
path = "tools/replication_group_commit_benchmark.rs"
bench = false

[[bin]]
name = "encrypted_append_demo"
path = "tools/encrypted_append_demo.rs"
bench = false

[[bin]]
name = "encryption_overhead_benchmark"
path = "tools/encryption_overhead_benchmark.rs"
bench = false

[[bin]]
name = "context_ingest_ra_proto"
path = "tools/context_ingest_ra_proto.rs"
bench = false

[[bin]]
name = "context_bundle_dump"
path = "tools/context_bundle_dump.rs"
bench = false

[[bin]]
name = "proposal_gatekeeper"
path = "tools/proposal_gatekeeper.rs"
bench = false

[[bin]]
name = "proposal_batch_gatekeeper"
path = "tools/proposal_batch_gatekeeper.rs"
bench = false

[[bin]]
name = "simulate_10_agents"
path = "tools/simulate_10_agents.rs"
bench = false

[[bin]]
name = "vfs_operator"
path = "tools/vfs_operator.rs"
bench = false

[[bin]]
name = "docker_log_ingest"
path = "tools/docker_log_ingest.rs"
bench = false

[[bin]]
name = "docker_log_ingest_benchmark"
path = "tools/docker_log_ingest_benchmark.rs"
bench = false

[[bin]]
name = "docker_log_driver"
path = "tools/docker_log_driver.rs"
bench = false

[package.metadata.cargo-machete]
ignored = ["prost-build"]
