# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-term-core"
version.workspace = true
edition = "2024"
license.workspace = true

[features]
default = []
test-util = []

[dependencies]
log = "0.4"
base64 = "0.21"
bytemuck = { version = "1.14", features = ["derive"] }
fdsm = "0.8"
fdsm-ttf-parser = "0.2"
icy_sixel = "0.4.3"
image = "0.25"
nalgebra = "0.34.1"
once_cell = "1.19"
rustybuzz = "0.20"
swash = "0.1"
ttf-parser = "0.25.1"
unicode-width = "0.1"
vte = "0.13"

thiserror.workspace = true
dirs = "6.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.3"
edgerun-observability = { path = "../edgerun-observability" }
pixels = "0.15"

[dev-dependencies]
