# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-term-native"
version.workspace = true
edition = "2024"
license.workspace = true
build = "build.rs"

[[bin]]
name = "term"
path = "src/main.rs"

[dependencies]
arboard = { version = "3.3", features = ["wayland-data-control"] }
anyhow = "1"
dirs = "5.0"
edgerun-observability = { path = "../edgerun-observability" }
json = "0.12"
log = "0.4"
once_cell = "1.19"
pixels = "0.15"
portable-pty = "0.8"
term-core = { package = "edgerun-term-core", path = "../edgerun-term-core", features = ["test-util"] }
term-ui = { package = "edgerun-term-ui", path = "../edgerun-term-ui" }
vte = "0.13"
winit = { version = "0.30", default-features = false, features = [
    "rwh_06",
    "x11",
    "wayland",
    "wayland-dlopen",
    "wayland-csd-adwaita",
] }

[dev-dependencies]
anyhow = "1"
libc = "0.2"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_cpu"
harness = false
