# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-term-server"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1"
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
bs58 = "0.5"
ed25519-dalek.workspace = true
edgerun-hwvault-primitives = { path = "../edgerun-hwvault-primitives" }
edgerun-observability = { path = "../edgerun-observability" }
edgerun-control-signing = { path = "../edgerun-control-signing" }
json = "0.12"
portable-pty = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower-http = { workspace = true, features = ["fs"] }
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mux_protocol"
harness = false

[[bench]]
name = "mux_smoke"
harness = false
