[package]
name = "edgerun-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
bytes = "1"
edgerun-transport-core = { path = "../edgerun-transport-core" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio = { workspace = true, features = ["net"] }
url = "2"

[dev-dependencies]
base64 = "0.22"
rcgen = "0.13"
tokio.workspace = true
