# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-tunnel-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
blake3.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hmac = "0.12"
prost = "0.13"
rand = "0.8"
sha2 = "0.10"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
edgerun-runtime-proto = { path = "../edgerun-runtime-proto" }
