# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-worker"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-system-interface.workspace = true
edgerun-runtime = { path = "../../crates/edgerun-runtime" }
edgerun-crypto = { path = "../../crates/edgerun-crypto" }
edgerun-types = { path = "../../crates/edgerun-types" }
